update the app, make add function

--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html>
 
 <head>
-
+    <link rel="stylesheet" href="style.css">
+    <title>List</title>
 </head>
 
 <body>
-    <input type="text" id="input1">
-    <button id="addItem">Add</button>
-    <div id="display"></div>
+    <div class="main">
+        <div class="addItemsForm">
+            <input type="text" id="input1" placeholder="Enter item name">
+            <button id="addItem">Add</button>
+        </div>
+        <div id="display"></div>
+    </div>
     <script type="module" src="script.js"></script>
 </body>
 
