--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
         <div class="addItemsForm">
             <input type="text" id="input1" placeholder="Enter item name">
             <button id="addItem">Add</button>
+            <button id="deletebutton">Delete</button>
         </div>
         <div id="display"></div>
     </div>
+
     <script type="module" src="script.js"></script>
 </body>
 
