--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <title>List</title>
+    <link rel="icon" href="logo.png">
+    <link rel="apple-touch-icon" href="logo.png">
 </head>
 
 <body>
