--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>List</title>
     <link rel="icon" href="logo.png">
     <link rel="apple-touch-icon" href="logo.png">
+    <link rel="viewport" content="width=device-width;initalscale=1.0">
 </head>
 
 <body>
