add search function

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="addItemsForm">
             <input type="text" id="input1" placeholder="Enter item name">
             <button id="addItem">Add</button>
+            <button id="searchButton">Search</button>
             <button id="deletebutton">Delete</button>
         </div>
         <div id="display"></div>
